Fixed menu on smaller screens [#117280317]

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -54,6 +54,15 @@ md-toolbar.topbar {
     padding-top: 12px;
 }
 
+.md-toolbar-tools.menu-small img.logo {
+  width: 60px;
+  height: 50px;
+}
+
+.md-toolbar-tools.menu-small {
+  padding: 0 5px;
+}
+
 #logo-home-bn {
     width: 72px;
 }
@@ -66,6 +75,10 @@ md-toolbar.topbar {
   padding: 0 3px;
   font-size: 14px;
   line-height: 19px;
+}
+
+.menu-small button.md-button {
+  min-width: 5px;
 }
 
 .help-question-block {
